Wire beams up to dat.GUI and a quick bugfix for untargeted beams stuck in a charge/discharge cycle

--- a/app/styles/foo.styl
+++ b/app/styles/foo.styl
@@ -45,3 +45,6 @@ body
     width: 100%
     height: 100%
     //border: 1px solid #000
+
+.dg, #stats
+    opacity: 0.7
